assets/css/style.css
/* styling */

   body {
       font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
       font-size: 18px;
       color: #777777;
       background: url(../images/concrete_seamless.png) repeat;
   }

   a, a:visited {
       color: #777777;
       text-decoration: none;
       padding: 10px 15px;
   }

   a:hover {
       color: #ffffff;
       background-color: #aa4a4f;
       transition: 500ms ease all;
   }

   h1 {
       font-family: Georgia, 'Times New Roman', Times, serif;
       font-size: 30px;
       font-weight: bold;
   }

   header {
       width: 100%;
       height: 90px;
       background-color: #ffffff;
       border-bottom: 2px solid #cccccc;
       margin-bottom: 38px;
       display: inline-table;
   }

   header section {
       width: 960px;
       
       height: 100%;
       margin: 0 auto;
   }

   header section .logo {
       width: 250px;
       height: 100%;
       float: left;
       background-color: #4aaaa5;
   }

   header section .logo:hover {
    transition: 500ms ease all;
    cursor: pointer;
    background-color: #aa4a4f;
}

   header section .logo h1 {
       margin-top: 14%;
       transform: translate(0, -16%);
       text-align: center;
       color: #ffffff;
   }

   nav {
       float: right;
   }

   nav ul {
       margin-top: 13.5%;
       transform: translate(0, -13.5%);
   }

   nav li {
       display: inline-block;
   }

   nav li::after {
       content: "|";
       margin-right: -5px;
       color: #efefef;
   }

   nav li:last-child::after {
       margin-right: 0;
       content: "";
   }

   main {
       width: 898px;
       height: auto;
       position: relative;
       padding: 40px 30px;
       margin: 0 auto 100px auto;
       background-color: #ffffff;
       border: 1px solid #dddddd;
   }

   main section {
       width: 100%;
   }

   main h1 {
       padding-bottom: 34px;
       color: #4aaaa5;
       border-bottom: 3px solid #dddddd;
       margin-bottom: 30px;
   }

   main p {
       line-height: 2;
   }

   footer {
       width: 100%;
       height: 60px;
       position: fixed;
       bottom: 0;
       background-color: #666666;
       border-top: 8px solid #4aaaa5;
   }

   h4 {
    text-align: center;
    margin-top: 35px;
    font-size: 14px;
    color: #cccccc;
    }

    em {
        font-style: italic;
    }


   /* styles for the about page */

   .bio h1 {
       margin-bottom: 19px;
   }

   .bio .img_box {
       margin: 11px 25px 0 0;
       float: left;
       overflow: hidden;
    }

   .bio img {
       float: left;
       width: 200px;
       transition: transform .5s;
   }

   .bio img:hover {
       transform: scale(1.7);
   }

   /* styles for the portfolio page */

   .gallery h1 {
       margin-bottom: 15px;
   }

   /* start grid */

   /* .gallery {
       margin: 0 auto;
       max-width: 1200px;
       padding: 0 1rem;
   } */

   .responsive-image {
       max-width: 100%;
   }

   .cell {
       margin: 1rem;
   }

   .cell img {
       display: block;
   }

   /* end grid */

   .gallery article {
       display: inline-block;
       /* margin-right: 34px;
       margin-bottom: 52px; */
       position: relative;
   }

   .gallery article a {
        position: absolute;
        bottom: 9px;
        height: 37px;
        width: 100%;
        padding: 23px 0 0 0;
        background-color: #4aaaa5;
        text-align: center;
        font-family: Georgia, 'Times New Roman', Times, serif;
        font-size: 17px;
        color: #ffffff;
   }

   .gallery article a:hover {
       transition: 500ms ease all;
       background-color: #aa4a4f;
       color: #ffffff;
   }

   /* styles for the contact page */

   label, input, textarea {
       display: block;
   }

   label {
       margin-bottom: 12px;
   }

   input::placeholder {
       font-size: 14px;
       color: #4aaaa4;
   }

   input, textarea {
       width: 97%;
       margin-bottom: 20px;
       padding: 10px;
       color: #777777;
       font-size: 14px;
   }

   textarea {
       height: 200px;
   }

   input.contact_submit {
       width: 115px;
       height: 40px;
       background-color: #4aaaa5;
       border: none;
       font-size: 100%;
       color: #ffffff;
   }

   input.contact_submit:hover {
       transition: 500ms ease all;
       background-color: #aa4a4f;
       color: #ffffff;
   }



/* tablet */
@media screen and (min-width: 600px) {

    .grid {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
    }

    .cell {
        width: calc(45% - 2rem);
    }
}

/* desktop */
@media screen and (min-width: 1000px) {

    .cell {
        /* width: calc(100% / 3); */
        width: calc(33.3333% - 2rem);
    }
}

/* navbar */
@media screen and (max-width: 960px) {
    header section {
        width: 100%;
    }

    main {
        width: 100%;
        padding: 40px 0 0 0;
    }

    main section {
        width: auto;
        margin: 0 1rem 0 1rem;
    }

    .gallery h1 {
        margin: 0 1rem 15px 1rem;
    }
}

@media screen and (max-width: 525px) {

    header section .logo {
        width: 100%;
    }

    nav {
        float: none;
        clear: both;
        text-align: center;
        background-color: rgba(197, 197, 197, 0.43);
        height: 40px;
        line-height: 57px;
    }

    .bio .img_box {
        margin: 0;
        float: none;
    }

    .bio img {
        width: 100%;
    }
}

/* @media screen and (min-width: 600px) {
    
    header section logo {
        width: 100%;
    }

    nav {
        text-align: center;
        float: none;
    }
} */

